# py6502

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.claude/agents/: sim-perf-reviewer.md
.claude/skills/commit/: SKILL.md
.claude/skills/new-peripheral/: SKILL.md
.claude/skills/pr-kickstart/: SKILL.md
.claude/skills/roadmap/: SKILL.md
docs/: ARCHITECTURE.md  ROADMAP.md  SYSTEM_CONFIG.md
src/asm/: asm.py
src/py6502/: __init__.py  __main__.py
src/py6502/sim/: CLAUDE.md  README.md  __init__.py  manifest.py
src/py6502/sim/assets/: manifest.yaml
src/py6502/sim/assets/presets/: apple1-8k.yaml  apple1.yaml
src/py6502/sim/bus/: __init__.py  buscontroller.pxd  buscontroller.pyx  component.pxd  component.pyx  emptyaddress.pxd  emptyaddress.pyx  memory.pxd  memory.pyx
src/py6502/sim/cpu/: __init__.py  mos6502.pxd  mos6502.pyx
src/py6502/sim/graphics/: textdisplay.pxd  textdisplay.pyx
src/py6502/sim/peripherals/: __init__.py  apple1.pxd  apple1.pyx  apple1_display.pxd  apple1_display.pyx  apple1_keyboard.pxd  apple1_keyboard.pyx
src/py6502/sim/system/: __init__.py  config.py  loader.py  registry.py  system.pxd  system.pyx  writer.py
src/py6502/ui/: CLAUDE.md  README.md  __init__.py  app.py  py6502ui.py  themes.py
src/py6502/ui/systems/: __init__.py  config.py
src/py6502/ui/utils/: __init__.py  instructionmaps.py  keyhandler.py  paths.py  presets.py  settings.py
src/py6502/ui/widgets/: __init__.py  binary_source_picker.py
src/py6502/ui/windows/: __init__.py  about.py  binaryloader.py  debug.py  settings.py  systemselector.py  video.py
src/py6502asm/: __init__.py  asm.py
src/py6502sim/: __init__.py  clock.py  component.pxd  component.py  component.pyx  controller.pxd  controller.py  controller.pyx  memory.pxd  memory.py  memory.pyx  processor.pxd  processor.py  processor.pyx
src/py6502sim/bus/: __init__.py  buscontroller.pxd  buscontroller.pyx  component.pxd  component.pyx  emptyaddress.pxd  emptyaddress.pyx  memory.pxd  memory.pyx
src/py6502sim/cpu/: mos6502.pxd  mos6502.pyx
src/py6502sim/graphics/: __init__.py  textdisplay.pxd  textdisplay.pyx
src/py6502sim/peripheral/: __init__.py  apple1.pxd  apple1.pyx
src/py6502ui/: __init__.py  py6502ui.py
tests/: test_apple1_split.py  test_binaries.py  test_invalid_opcode.py  test_manifest.py  test_options.py  test_paths.py  test_runtime_load_binary.py  test_system_loader.py  test_system_smoke.py  test_unmapped_memory.py  test_writer.py
