[build-system]
requires = ["setuptools>=42", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "py6502"
version = "0.2.0"
description = "Emulator of everything 6502. A cycle-accurate 6502 simulator and a DearPyGui frontend, aimed at hobbyists, educators, and retro-computing enthusiasts."
authors = [{name = "Ricky Groenewald", email = "6112032+ricky-groenewald@users.noreply.github.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "platformdirs>=4.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Emulators",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["py6502*"]

[tool.setuptools.package-data]
"py6502.sim" = ["assets/**/*"]